--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+   <!-- Add this line to include Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-MFEQ8qRy4a6GN7CqOD6GQ13KWxIgy4NjQy7YyzXf3eJmj4D+HAHP6gZhY7eKhAA6" crossorigin="anonymous">
+
+<!-- You may also need to include the Bootstrap JavaScript library -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-cZcV2w4PzN47x9rSxFnLqBR7Qq14mI6z5IaxMvpoZBj/8EDPi1KCA6D2VE0/cGSz" crossorigin="anonymous"></script>
+
     <meta
       name="description"
       content="Web site created using create-react-app"
